# serializer version: 1
# name: TestConfirmEmailView.test_invalid_url
  '''
  <main class="s-main" id="main" role="main">
              <div aria-atomic="true" aria-live="polite" class="toast-container">
  
  </div>
  
              <section class="s-title-02">
                  <div class="s-title-02__container container">
                      <div class="s-title-02__row row">
                          <div class="s-title-02__col col-12">
                              
                              <h1>Confirmer l'adresse e-mail</h1>
                              
      
                                  
  
  
                              
      <div class="alert alert-warning" role="status">
          <p class="mb-0">Ce compte est inactif.</p>
      </div>
  
                              
                          </div>
                      </div>
                  </div>
              </section>
  
              
      <section class="s-section">
          <div class="s-section__container container">
              <div class="row">
                  <div class="col-12 col-lg-8">
                      
  
                          
  
                          <div class="alert alert-danger" role="status">
                              <p class="mb-2">Ce lien de confirmation d'adresse e-mail a expiré ou n'est pas valide.</p>
                              <p class="mb-0">
                                  Veuillez lancer <a href="">une nouvelle demande de confirmation</a>.
                              </p>
                          </div>
  
                      
                  </div>
              </div>
          </div>
      </section>
  
          </main>
  '''
# ---
# name: TestEmailVerificationSentView.test_page_content
  '''
  <main class="s-main" id="main" role="main">
              <div aria-atomic="true" aria-live="polite" class="toast-container">
  
  </div>
  
              <section class="s-title-02">
                  <div class="s-title-02__container container">
                      <div class="s-title-02__row row">
                          <div class="s-title-02__col col-12">
                              
                              
      <h1>Vérifiez votre adresse e-mail</h1>
      <p>
          Nous vous avons envoyé un e-mail avec un lien pour validation. Cliquez sur le lien fourni pour terminer votre inscription.
      </p>
  
                              
                                  
  
  
                              
                              
                          </div>
                      </div>
                  </div>
              </section>
  
              
          </main>
  '''
# ---
# name: TestPasswordResetDoneView.test_already_logged_in
  '''
  <main class="s-main" id="main" role="main">
              <div aria-atomic="true" aria-live="polite" class="toast-container">
  
  </div>
  
              <section class="s-title-02">
                  <div class="s-title-02__container container">
                      <div class="s-title-02__row row">
                          <div class="s-title-02__col col-12">
                              
                              
      <h1>Si un compte existe, vous recevrez un e-mail de réinitialisation</h1>
      
  
                              
                                  
  
  
                              
                              
                          </div>
                      </div>
                  </div>
              </section>
  
              
      <section class="s-section">
          <div class="s-section__container container">
              <div class="row">
                  <div class="col-12 col-lg-8">
                      
                          <p>
      <b>Remarque :</b> vous êtes déjà connecté en tant que <b>jane.doe@test.local</b>.
  </p>
  
                      
                      <p>Il contient les instructions pour réinitialiser votre mot de passe.</p>
                      <p>Si vous le ne recevez pas dans les minutes qui suivent :</p>
                      <ul>
                          <li>vérifiez votre courrier indésirable</li>
                          <li>vérifiez qu'il n'y a pas d'erreur dans votre e-mail</li>
                      </ul>
                  </div>
              </div>
          </div>
      </section>
  
          </main>
  '''
# ---
# name: TestPasswordResetDoneView.test_get
  '''
  <main class="s-main" id="main" role="main">
              <div aria-atomic="true" aria-live="polite" class="toast-container">
  
  </div>
  
              <section class="s-title-02">
                  <div class="s-title-02__container container">
                      <div class="s-title-02__row row">
                          <div class="s-title-02__col col-12">
                              
                              
      <h1>Si un compte existe, vous recevrez un e-mail de réinitialisation</h1>
      
  
                              
                                  
  
  
                              
                              
                          </div>
                      </div>
                  </div>
              </section>
  
              
      <section class="s-section">
          <div class="s-section__container container">
              <div class="row">
                  <div class="col-12 col-lg-8">
                      
                      <p>Il contient les instructions pour réinitialiser votre mot de passe.</p>
                      <p>Si vous le ne recevez pas dans les minutes qui suivent :</p>
                      <ul>
                          <li>vérifiez votre courrier indésirable</li>
                          <li>vérifiez qu'il n'y a pas d'erreur dans votre e-mail</li>
                      </ul>
                  </div>
              </div>
          </div>
      </section>
  
          </main>
  '''
# ---
# name: TestPasswordResetFromKeyDoneView.test_get
  '''
  <main class="s-main" id="main" role="main">
              <div aria-atomic="true" aria-live="polite" class="toast-container">
  
  </div>
  
              <section class="s-title-02">
                  <div class="s-title-02__container container">
                      <div class="s-title-02__row row">
                          <div class="s-title-02__col col-12">
                              
                              
      <h1>Modification de votre mot de passe</h1>
      <p>Votre mot de passe a été modifié !</p>
  
                              
                                  
  
  
                              
                              
                          </div>
                      </div>
                  </div>
              </section>
  
              
          </main>
  '''
# ---
